--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^6.0.8",
+    "sass": "^1.97.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
